--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,34 @@
 absl-py==1.3.0
+accelerate==0.20.3
 aiohttp==3.8.3
 aiosignal==1.3.1
-ipywidgets
-albumentations
+albumentations==1.3.1
+altair==5.0.1
 aniso8601==9.0.1
 antlr4-python3-runtime==4.8
 asttokens==2.1.0
 async-timeout==4.0.2
 attrs==22.1.0
+autofaiss==2.15.6
 backcall==0.2.0
 backports.zoneinfo==0.2.1
 blinker==1.5
 braceexpand==0.1.7
 cachetools==5.2.0
+certifi==2023.5.7
 charset-normalizer==2.1.1
 click==8.1.3
 -e git+https://github.com/openai/CLIP.git@d50d76daa670286dd6cacf3bcd80b5e4823fc8e1#egg=clip
 clip-anytorch==2.5.0
 clip-retrieval==2.35.1
 coloredlogs==15.0.1
+comm==0.1.3
 commonmark==0.9.1
 Cython==0.29.32
 dataclasses==0.6
-debugpy==1.6.3
+debugpy==1.6.7
 decorator==5.1.1
-diffusers==0.3.0
+diffusers==0.16.1
 docker-pycreds==0.4.0
 einops==0.3.0
 embedding-reader==1.5.0
@@ -49,12 +53,27 @@ google-auth==2.14.1
 google-auth-oauthlib==0.4.6
 grpcio==1.50.0
 h5py==3.7.0
-huggingface-hub==0.11.0
+huggingface-hub==0.15.1
 humanfriendly==10.0
+idna==3.4
+imageio==2.31.1
+img2dataset==1.35.0
+importlib-metadata==6.7.0
+importlib-resources==5.12.0
+ipykernel==6.23.2
+ipython==8.12.1
+ipywidgets==8.0.5
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.0
+jupyter_client==8.2.0
+jupyter_core==5.3.1
+jupyterlab-widgets==3.0.7
+Markdown==3.4.3
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
 mpmath==1.2.1
 multidict==6.0.2
 multilingual-clip==1.0.10
@@ -78,7 +97,7 @@ pathtools==0.1.2
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.2.0
-pkgutil-resolve-name==1.3.10
+pkgutil_resolve_name==1.3.10
 platformdirs==2.5.4
 prometheus-client==0.15.0
 promise==2.3
@@ -92,6 +111,7 @@ pyarrow==7.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydeck==0.8.0
+pydensecrf @ git+https://github.com/lucasb-eyer/pydensecrf.git@0d53acbcf5123d4c88040fe68fbb9805fc5b2fb9
 pyDeprecate==0.3.1
 Pygments==2.13.0
 Pympler==1.0.1
@@ -111,6 +131,7 @@ requests-oauthlib==1.3.1
 rich==12.6.0
 rsa==4.9
 sacremoses==0.0.53
+safetensors==0.3.1
 scikit-image==0.19.3
 scikit-learn==1.1.3
 scipy==1.9.3
@@ -120,6 +141,7 @@ sentencepiece==0.1.97
 sentry-sdk==1.11.1
 setproctitle==1.3.2
 shortuuid==1.0.11
+six==1.16.0
 smmap==5.0.0
 stack-data==0.6.1
 streamlit==1.15.0
@@ -135,16 +157,17 @@ tifffile==2022.10.10
 tokenizers==0.12.1
 toml==0.10.2
 toolz==0.12.0
-torch==1.9.1
+torch==1.11.0
 torch-fidelity==0.3.0
-torchaudio==0.9.1
+torchaudio==0.11.0
 torchmetrics==0.10.3
-torchvision==0.10.1
+torchvision==0.12.0
 tornado==6.2
 tqdm==4.64.1
 traitlets==5.5.0
-transformers==4.19.2
+transformers==4.30.2
 types-pytz==2022.6.0.1
+typing_extensions==4.6.3
 tzdata==2022.6
 tzlocal==4.2
 urllib3==1.26.12
@@ -158,4 +181,3 @@ Werkzeug==2.2.2
 widgetsnbextension==4.0.3
 yarl==1.8.1
 zipp==3.10.0
-
